2005/11/13	muppetman

	* GValue.xs, GObject.xs:  The GObject property interface passes around
	pointers to boxed objects, but does not transfer ownership of them.
	Thus, the old code was letting perl hold on to dead pointers.  We
	basically need to be able to specify whether to copy boxed objects
	when converting from GValue to SV.  Since gperl_sv_from_value() is
	public and API frozen, add a new private function,
	_gperl_sv_from_value_internal(), and call this from both
	gperl_sv_from_value() and Glib::Object::get().  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=319204 and several other
	hard-to-diagnose intermittent bugs.

2005/10/14	muppetman

	* GObject.xs, AUTHORS: Patch from Steven Walter fixes nasty reference
	counting bug that could leave Perl wrappers pointing at dead C objects
	in some situations.  Because we have no C containers in glib-object,
	we can't really add tests for this.

2005/10/03	kaffeetisch

	* Glib.pm, NEWS, README: Stable release 1.101.

2005/10/03	kaffeetisch

	* t/c.t: Change the flags test yet again.  Make it explicit this
	time by using is_deeply() and \@{} so it hopefully works with any
	version of Test::More.

2005/09/05	kaffeetisch

	* MANIFEST, META.yml: Remove META.yml.

	* Glib.pm, Makefile.PL, NEWS, README: Stable release 1.100.

2005/07/27	muppetman

	* CodeGen.pm: Forgot to delete the leftover gtk junk before committing.

2005/07/27	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.093.

2005/07/26	muppetman

	* CodeGen.pm, Makefile.PL, MANIFEST: Take out the Gtk2-specific
	portions of Gtk2::CodeGen, make it extensible, and call it
	Glib::CodeGen.

2005/07/12	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.092.

2005/07/05	kaffeetisch

	* GUtils.xs, t/1.t: Bind and test g_markup_escape_text.

2005/07/02 00:32 pcg

	* GMainLoop.xs (add_watch): on native win32, convert the perl fileno
	to a winsock fileno using win32_get_osfhandle and call
	g_io_channel_win32_new_socket directly.