@@ -303,14 +303,14 @@ not, which allows you to write common operations naturally:
   # either shift OR control pressed?
   if ($event->state * ["shift-mask", "control-mask"]) { ...
 
-  # both shift AND control be pressed?
+  # both shift AND control pressed?
   if ($event->state >= ["shift-mask", "control-mask"]) { ...
 
 In general, C<+> and C<-> work as expected to add or remove flags. To test
 whether I<any> bits are set in a mask, you use C<$mask * ...>, and to test
-whether I<all> bits are set in a mask, you use C<$mask E<gt>= ...>.
+whether I<all> bits are set in a mask, you use C<< $mask >= ... >>.
 
-When dereferenced as an array C<@$flags> or C<$flags->[...]>, you can
+When dereferenced as an array C<@$flags> or C<< $flags->[...] >>, you can
 access the flag values directly as strings (but you are not allowed to
 modify the array), and when stringified C<"$flags"> a flags value will
 output a human-readable version of its contents.
